Remove footer link and fix head body spacing

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -10,3 +10,7 @@
   padding-left: 20px;
 }
 
+
+aside {
+  padding-left: 3em;
+}
