--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -3,11 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .user_info {
-  background-color: #51BD33;
-  border-radius: 15px;
-}
+    background-color: #51BD33;
+    border-radius: 15px;
+  }
 
 .recipes {
   background-color: #78CBFF;
+  border: 2px solid;
   border-radius: 15px;
 }
